--- a/server/.env
+++ b/server/.env
@@ -1,2 +1,2 @@
-MONGO = mongodb+srv://arjunn881:admin@cluster0.ry5ikfp.mongodb.net/?retryWrites=true&w=majority
+MONGO = mongodb+srv://arjunn881:admin@cluster0.kphrut6.mongodb.net/?retryWrites=true&w=majority
 JWT = "arjunn881@7978"
