--- a/server/.env
+++ b/server/.env
@@ -1,2 +1,2 @@
-MONGO = mongodb+srv://arjunn881:admin@cluster0.kphrut6.mongodb.net/?retryWrites=true&w=majority
-JWT = "arjunn881@7978"
+MONGO = mongodb+srv://arjunn881:admin@cluster0.s3boph2.mongodb.net/?retryWrites=true&w=majority
+JWT = arjunn881@7978
